// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Control prefers children over text prop 1`] = `
<label
  className="control checkbox"
>
  <input
    checked={false}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
  <span
    className="control-label"
  >
    Hello
  </span>
</label>
`;

exports[`Control renders checkbox (text prop) 1`] = `
<label
  className="control checkbox"
>
  <input
    checked={false}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
  <span
    className="control-label"
  >
    Hello
  </span>
</label>
`;

exports[`Control renders checkbox 1`] = `
<label
  className="control checkbox"
>
  <input
    checked={false}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
  <span
    className="control-label"
  >
    Hello
  </span>
</label>
`;

exports[`Control renders checked checkbox 1`] = `
<label
  className="control checkbox"
>
  <input
    checked={true}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
  <span
    className="control-label"
  >
    Hello
  </span>
</label>
`;

exports[`Control renders color prop (indicator) 1`] = `
<label
  className="control checkbox success"
>
  <input
    checked={false}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
</label>
`;

exports[`Control renders complex 1`] = `
<label
  className="control thing checkbox control-s error"
>
  <input
    checked={true}
    disabled={undefined}
    name="hello"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
  <span
    className="control-label"
  >
    Chekbox label
  </span>
</label>
`;

exports[`Control renders custom className 1`] = `
<label
  className="control custom-do-dah checkbox"
>
  <input
    checked={false}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
</label>
`;

exports[`Control renders disabled (readOnly prop) 1`] = `
<label
  className="control checkbox disabled"
>
  <input
    checked={false}
    disabled={true}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
</label>
`;

exports[`Control renders disabled 1`] = `
<label
  className="control checkbox disabled"
>
  <input
    checked={false}
    disabled={true}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
</label>
`;

exports[`Control renders inline prop 1`] = `
<label
  className="control checkbox control-inline"
>
  <input
    checked={false}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
</label>
`;

exports[`Control renders name prop 1`] = `
<label
  className="control checkbox"
>
  <input
    checked={false}
    disabled={undefined}
    name="terms"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
</label>
`;

exports[`Control renders reversed prop 1`] = `
<label
  className="control checkbox control-reversed"
>
  <input
    checked={false}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
</label>
`;

exports[`Control renders size prop 1`] = `
<label
  className="control checkbox control-xl"
>
  <input
    checked={false}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
</label>
`;

exports[`Control renders without span.control-label 1`] = `
<label
  className="control checkbox"
>
  <input
    checked={false}
    disabled={undefined}
    name={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="control-indicator"
  />
</label>
`;
